# morekov

./: .gitignore  Cargo.toml  authorizationcode  basic_idea.md  how_dealing_with_notifications_is_going_to_work.md
src/: bot.rs  main.rs  markov.rs  parse_mention.rs
