[package]
name = "morekov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
html2md = "0.2.13"
itertools = "0.10.3"
markov = { version = "1.1.0", features = ["graph"] }
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["full"] }
urlencoding = "2.1.0"
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }

[features]
